force-app/main/default/objects/Pago_Beneficiario__c/Pago_Beneficiario__c.object-meta.xml
<CustomObject>
    <label>Pago Beneficiario</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Nombre de Pago</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos Beneficiarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>