force-app/main/default/objects/Pago_Beneficiario__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Pagos Beneficiarios / Terceros</relationshipLabel>
    <relationshipName>Pagos_Beneficiarios</relationshipName>
    <type>Lookup</type>
</CustomField>