force-app/main/default/objects/Pago_Beneficiario__c/fields/Comisiones_cargos__c.field-meta.xml
<CustomField>
    <fullName>Comisiones_cargos__c</fullName>
    <label>Comisiones y cargos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>