force-app/main/default/objects/Pago_Beneficiario__c/fields/Detalle_caso__c.field-meta.xml
<CustomField>
    <fullName>Detalle_caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalle caso</label>
    <referenceTo>Detalle_caso__c</referenceTo>
    <relationshipLabel>Pagos Beneficiarios</relationshipLabel>
    <relationshipName>Pagos_Beneficiarios</relationshipName>
    <type>Lookup</type>
</CustomField>