force-app/main/default/objects/Pago_Beneficiario__c/fields/Monto_Aporte_Patronal__c.field-meta.xml
<CustomField>
    <fullName>Monto_Aporte_Patronal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monto Aporte Patronal</label>
    <type>Checkbox</type>
</CustomField>