force-app/main/default/objects/Pago_Beneficiario__c/fields/Monto_bruto__c.field-meta.xml
<CustomField>
    <fullName>Monto_bruto__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monto bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>