force-app/main/default/objects/Pago_Beneficiario__c/fields/Monto_Bruto_Retirar_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Monto_Bruto_Retirar_Empresa__c</fullName>
    <label>Monto Bruto a Retirar Empresa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>