force-app/main/default/objects/Pago_Beneficiario__c/fields/Monto_Cheque_Patrono__c.field-meta.xml
<CustomField>
    <fullName>Monto_Cheque_Patrono__c</fullName>
    <formula>IF( AND ( TEXT ( Forma_Retiro__c ) == &apos;CK&apos;, TEXT ( Moneda_cuenta__c ) = &apos;HNL&apos; ), $CustomMetadata.Configuracion_Cobro__mdt.Cheque.Monto__c, IF ( AND ( TEXT ( Forma_Retiro__c ) == &apos;CK&apos;, TEXT ( Moneda_cuenta__c ) = &apos;USD&apos; ), $CustomMetadata.Configuracion_Cobro__mdt.Cheque.Monto_dolar__c, 0 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Cheque Patrono</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>