force-app/main/default/objects/Pago_Beneficiario__c/fields/Monto_neto_retirar__c.field-meta.xml
<CustomField>
    <fullName>Monto_neto_retirar__c</fullName>
    <label>Monto neto a retirar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>