force-app/main/default/objects/Pago_Beneficiario__c/fields/Monto_Neto_Retirar_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Monto_Neto_Retirar_Empresa__c</fullName>
    <description>Monto Neto Patronal</description>
    <label>Monto Neto Retirar Empresa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>