force-app/main/default/objects/Pago_Beneficiario__c/fields/Monto_Saldo_Patronal__c.field-meta.xml
<CustomField>
    <fullName>Monto_Saldo_Patronal__c</fullName>
    <formula>Monto_Saldo_Patronal_Ordinario__c * Porcentaje__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Saldo Patronal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>