force-app/main/default/objects/Pago_Beneficiario__c/fields/Monto_Saldo_Patronal_Ordinario__c.field-meta.xml
<CustomField>
    <fullName>Monto_Saldo_Patronal_Ordinario__c</fullName>
    <description>Saldo 12</description>
    <inlineHelpText>Saldo 12</inlineHelpText>
    <label>Monto Saldo Patronal Ordinario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>