force-app/main/default/objects/Pago_Beneficiario__c/fields/Monto_Saldo_Personal_ExtraOrdinario__c.field-meta.xml
<CustomField>
    <fullName>Monto_Saldo_Personal_ExtraOrdinario__c</fullName>
    <description>Saldo 11</description>
    <inlineHelpText>Saldo 11</inlineHelpText>
    <label>Monto Saldo Personal ExtraOrdinario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>