force-app/main/default/objects/Pago_Beneficiario__c/fields/Monto_Saldo_Personal_Ordinario__c.field-meta.xml
<CustomField>
    <fullName>Monto_Saldo_Personal_Ordinario__c</fullName>
    <description>Saldo 10</description>
    <inlineHelpText>Saldo 10</inlineHelpText>
    <label>Monto Saldo Personal Ordinario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>