force-app/main/default/objects/Pago_Beneficiario__c/fields/Monto_TSP_Patrono__c.field-meta.xml
<CustomField>
    <fullName>Monto_TSP_Patrono__c</fullName>
    <formula>Monto_Saldo_Patronal__c * 0.002</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto TSP Patrono</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>