force-app/main/default/objects/Pago_Beneficiario__c/fields/MontoACH__c.field-meta.xml
<CustomField>
    <fullName>MontoACH__c</fullName>
    <label>Monto ACH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>