force-app/main/default/objects/Pago_Beneficiario__c/fields/MontoCH__c.field-meta.xml
<CustomField>
    <fullName>MontoCH__c</fullName>
    <label>Monto Cheque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>