force-app/main/default/objects/Pago_Beneficiario__c/fields/MontoTSP__c.field-meta.xml
<CustomField>
    <fullName>MontoTSP__c</fullName>
    <label>Monto TSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>