force-app/main/default/objects/Pago_Beneficiario__c/fields/Nombre_banco__c.field-meta.xml
<CustomField>
    <fullName>Nombre_banco__c</fullName>
    <label>Nombre del banco</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Forma_Retiro__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>24</fullName>
                <label>BAC Honduras</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Banco Atlántida</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Banco Davivienda</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Banco de Los Trabajadores</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Banco del Pais</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Banco de Occidente</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Banco Ficensa</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Banco Hondureno del Cafe</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Banco Lafise</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Banco Promerica</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Banco Banrural</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Banco Azteca</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>Banco Banadesa</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Banco Central de Honduras</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Banco de Honduras</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Banco Ficohsa</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Bancovelo</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Credi Q</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>