force-app/main/default/objects/Pago_Beneficiario__c/fields/Num_caso__c.field-meta.xml
<CustomField>
    <fullName>Num_caso__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Número de caso</label>
    <type>AutoNumber</type>
</CustomField>