force-app/main/default/objects/Pago_Beneficiario__c/fields/Numero_cuenta_origen__c.field-meta.xml
<CustomField>
    <fullName>Numero_cuenta_origen__c</fullName>
    <label>Número de cuenta origen</label>
    <length>50</length>
    <type>Text</type>
</CustomField>