force-app/main/default/objects/Pago_Beneficiario__c/fields/Parentesco__c.field-meta.xml
<CustomField>
    <fullName>Parentesco__c</fullName>
    <label>Parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
                <label>Abuelo(a)</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Afiliado</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Amigo(a)</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Cónyuge</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Hermano(a)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Hijo(a)</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Nieto(a)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Padre / Madre</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Primo(a)</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Sobrino(a)</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Tio(a)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>