force-app/main/default/objects/Pago_Beneficiario__c/fields/Primer_apellido__c.field-meta.xml
<CustomField>
    <fullName>Primer_apellido__c</fullName>
    <label>Primer apellido</label>
    <length>50</length>
    <type>Text</type>
</CustomField>