force-app/main/default/objects/Pago_Beneficiario__c/fields/Primer_nombre__c.field-meta.xml
<CustomField>
    <fullName>Primer_nombre__c</fullName>
    <label>Primer nombre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>