force-app/main/default/objects/Pago_Beneficiario__c/fields/Saldo_Restante_Cuenta_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Restante_Cuenta_Cliente__c</fullName>
    <label>Saldo Restante a la Cuenta del Cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>