force-app/main/default/objects/Pago_Beneficiario__c/fields/Tipo_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_cuenta__c</fullName>
    <label>Tipo de cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ahorro</fullName>
            </value>
            <value>
                <fullName>Cheques</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>