force-app/main/default/objects/Pago_Beneficiario__c/fields/Tipo_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_pago__c</fullName>
    <label>Tipo de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>Pago a beneficiarios</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Pago a terceros</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Pago normal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>