force-app/main/default/objects/Pago_Beneficiario__c/fields/Total_Cargos_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Total_Cargos_Empresa__c</fullName>
    <label>Total Cargos Empresa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>